# addhoursandminutes

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  COMPILING.md  LICENSE.md  PACKAGING.md  README.md  analyze-and-test.sh  buildscript-android-debug.sh  buildscript-android-release.sh  buildscript-android.sh  buildscript-linux-debug.sh  buildscript-webasm.sh  publish-snap.sh  publish-webasm.sh  publish.sh
.github/workflows/: android-testing.yml  android.yml  android_test  ios.yml  linux.yml  macos.yml  windows.yml
docs/: _config.yml  index.markdown
docs/_data/: navigation.yml
docs/_pages/: acknowledgements.markdown  contact.markdown  download.markdown  privacy.markdown  screenshots.markdown
docs/assets/webasm/: addhoursandminutes.html  addhoursandminutes.js  qtloader.js
fastlane/: .env.template  Appfile  Fastfile
fastlane/metadata/android/de-DE/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/: 104004.txt  104006.txt  104007.txt  104008.txt  104011.txt  full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 104004.txt
generatedSources/: CMakeLists.txt
metadata/: CMakeLists.txt  de.akaflieg_freiburg.cavok.add_hours_and_minutes.appdata.xml  de.akaflieg_freiburg.cavok.add_hours_and_minutes.desktop
packaging/: CMakeLists.txt  CMakeLists.txt~
packaging/RPM/: CMakeLists.txt  addhoursandminutes.spec  ellipticcurve.spec
packaging/android/: AndroidManifest.xml  CMakeLists.txt  deployment-settings.json
packaging/debian/: CMakeLists.txt  changelog  control  copyright  rules
packaging/flatpak/: CMakeLists.txt  de.akaflieg_freiburg.cavok.add_hours_and_minutes.json
packaging/installer/: CMakeLists.txt
packaging/installer/config/: config.xml
packaging/tar/: CMakeLists.txt
snap/: snapcraft.yaml
src/: AndroidManifest.xml.in  CMakeLists.txt  PlatformAdapter.cpp  PlatformAdapter.h  addHoursAndMinutes.pro  addHoursAndMinutes.qrc  addHoursAndMinutes_de.ts  addHoursAndMinutes_translations.qrc  addhoursandminutes.pro  addhoursandminutes.pro.in  addhoursandminutes.qrc  addhoursandminutes_de.ts  addhoursandminutes_es.ts  addhoursandminutes_fr.ts  addhoursandminutes_it.ts  addhoursandminutes_pl.ts  androidAdaptor.cpp  androidAdaptor.h  androidClient.cpp  androidClient.h  firstRunNotifier.cpp  firstRunNotifier.h  main.cpp  platformAdapter.cpp  platformAdapter.h
src/android/: gradle.properties
src/android-sources/: AndroidManifest.xml  AndroidManifest.xml.in
src/android-sources/res/values/: apptheme.xml
src/android-sources/src/de/akaflieg_freiburg/cavok/add_hours_and_minutes/: AndroidAdaptor.java  AndroidClient.java
src/android/res/drawable/: splash.xml
src/android/res/values/: splashscreentheme.xml  strings.xml
src/android/res/values-de/: strings.xml
src/android/src/de/akaflieg_freiburg/cavok/add_hours_and_minutes/: AndroidAdaptor.java
src/ios/: Info.plist  LaunchScreen.storyboard  ObjCAdapter.h  ObjCAdapter.mm
src/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
src/ios/Assets.xcassets/Launch.imageset/: Contents.json
src/macos/: Info.plist  addhoursandminutes.entitlements  addhoursandminutes.icns  addhoursandminutes_for_Mac_App_Store.provisionprofile
src/qml/: AppWinContent.qml  Calculator.qml  CalculatorButton.qml  CenteringDialog.qml  DecoratedScrollView.qml  FirstRunDialog.qml  Info.qml  Keypad.qml  LongTextDialog.qml  main.qml
src/qml/calculator/: Calculator.qml
src/qml/info/: Info.qml
src/text/: firstStart.html.in  firstStart_de.html.in  info.html  info_de.html  info_de.html.in
